--- a/Win10/Vagrantfile
+++ b/Win10/Vagrantfile
@@ -1,6 +1,7 @@
 # Machine parameters
 machines = [
-  { :hostname => 'win10', :box => 'win10-1709', :cpus => '1', :maxmemory => '2048'}
+#  { :hostname => 'win10', :box => 'StefanScherer/windows_10', :cpus => '1', :maxmemory => '2048'}
+{ :hostname => 'win10', :box => 'win10-1903', :cpus => '1', :maxmemory => '2048'}
 ]
 
 # Vagrant configuration (file format v2)
@@ -25,12 +26,15 @@ Vagrant.configure("2") do |config|
           h.cpus = machine[:cpus]
           # maxmemory is the maximum allowed via dynamic allocation
           h.maxmemory = machine[:maxmemory]
-          h.differencing_disk = true
+          h.linked_clone = true
           h.auto_start_action = "Nothing"
           h.auto_stop_action = "TurnOff"
           h.ip_address_timeout = 600
       end
 
+      # rename the computer to machine the VM name
+      config.vm.provision "shell", inline: "Rename-Computer (Get-ItemProperty 'HKLM:\Software\Microsoft\Virtual Machine\Guest\Parameters\').VirtualMachineName"
+      
       # do a reboot
       node.vm.provision :reload      
 
