--- a/AD/Vagrantfile
+++ b/AD/Vagrantfile
@@ -1,7 +1,7 @@
 # Machine parameters
 nodes = [
-  { :hostname => 'labdc02', :box => 'win2k16', :cpus => '2', :maxmemory => '4096'},  
-  { :hostname => 'labdc01', :box => 'win2k16', :cpus => '2', :maxmemory => '4096'}
+  #{ :hostname => 'labdc02', :box => 'win2k16', :cpus => '2', :maxmemory => '4096'},  
+  { :hostname => 'labdc01', :box => 'win2k16', :cpus => '1', :maxmemory => '2048'}
 ]
 vSwitch =  "vExternal"
 
@@ -36,7 +36,7 @@ Vagrant.configure("2") do |config|
         h.cpus = node[:cpus]
         # maxmemory is the maximum allowed via dynamic allocation
         h.maxmemory = node[:maxmemory]
-        h.differencing_disk = true
+        h.linked_clone = true
         h.auto_start_action = "Nothing"
         h.auto_stop_action = "TurnOff"
         h.ip_address_timeout = 900
