--- a/LABDC01/Vagrantfile
+++ b/LABDC01/Vagrantfile
@@ -14,7 +14,7 @@ Vagrant.configure("2") do |config|
   # hyper-v specifics
   config.vm.provider "hyperv" do |h|
     h.vmname = "LABDC01"
-    h.differencing_disk = true
+    h.linked_clone = true
     h.auto_start_action = "Nothing"
     h.auto_stop_action = "TurnOff"
     h.ip_address_timeout = 600
