--- a/LABICA02/Vagrantfile
+++ b/LABICA02/Vagrantfile
@@ -25,7 +25,7 @@ Vagrant.configure("2") do |config|
           h.cpus = machine[:cpus]
           # maxmemory is the maximum allowed via dynamic allocation
           h.maxmemory = machine[:maxmemory]
-          h.differencing_disk = true
+          h.linked_clone = true
           h.auto_start_action = "Nothing"
           h.auto_stop_action = "TurnOff"
           h.ip_address_timeout = 600
