--- a/ADDMZ/Vagrantfile
+++ b/ADDMZ/Vagrantfile
@@ -1,7 +1,7 @@
 # Machine parameters
 nodes = [
   #{ :hostname => 'labdc02', :box => 'win2k16', :cpus => '2', :maxmemory => '4096'},  
-  { :hostname => 'labdc01', :box => 'win2k16', :cpus => '1', :maxmemory => '2048'}
+  { :hostname => 'labdmzdc01', :box => 'win2k16', :cpus => '1', :maxmemory => '2048'}
 ]
 vSwitch =  "vExternal"
 
@@ -58,7 +58,7 @@ Vagrant.configure("2") do |config|
     config.vm.provision "shell", inline: "net user administrator SuperSecret1"
 
     # copy & run DSC scripts
-    config.vm.provision "file", source: "./DSC", destination: "C:/Admin"
+    config.vm.provision "file", source: "./DSC", destination: "C:/Admin/"
     config.vm.provision "shell" do |s|
       s.inline = "C:/Admin/DSC/ADcontroller-vagrant.ps1 $args[0] $args[1]"
       s.args   = [ENV['Password'],ENV['Password']]
